k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snipqurl
  namespace: snipqurl
  labels:
    app: snipqurl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snipqurl
  template:
    metadata:
      labels:
        app: snipqurl
    spec:
      containers:
        - name: snipqurl
          image: dos382/snipqurl:b675b55286a580079cd9d778939e1aeef8150f4f
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
