k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snipqurl
  namespace: snipqurl
spec:
  selector:
    app: snipqurl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
