k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snipqurl-ingress
  namespace: snipqurl
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - daonm.id.vn
    secretName: snipqurl-tls
  rules:
  - host: daonm.id.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snipqurl
            port:
              number: 80
